# interview-Life-Saver

./: .gitignore  LICENCE  README.md  build-native-addon-gyp.bat  build-native-addon-manual.bat  build-native-addon.bat  electron.vite.config.ts  package-lock.json  package.json  test-addon.js
native-addon/window-utils/: CMakeLists.txt  README.md  binding.gyp  index.js  package-lock.json  package.json
native-addon/window-utils/src/: window-utils.cc
src/main/: config.ts  index.ts  overlay.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html  overlay.html
src/renderer/src/: App.tsx  env.d.ts  types.d.ts
src/renderer/src/assets/: icons.tsx
src/renderer/src/components/: ControlBar.tsx  ModelSelector.d.ts  overlay.tsx
test/: index.html
